# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Sep 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild, metadata.xml:
  With USE="athena", link against libXaw.

  12 Sep 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Change [ ] to [[ ]] througout.

  09 Sep 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild:
  Fix previous commit.

  02 Sep 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Remove outdated warning. Port some changes from 24 to 23 ebuild.

  19 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Record bzr branch and revision in the binary.
  USE flags gconf and gsettings no longer exclude each other.

  17 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Set last component of emacs-version to ${PR}+1.

  13 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Remove RESTRICT=strip. I never understood why this would be needed; so let's
  see if someone will complain.

  02 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Sync from Portage tree.

  15 Jul 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r1.ebuild,
  metadata.xml:
  Sync from Portage tree.

  19 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild, -emacs-vcs-24.0.9999-r2.ebuild:
  Sync from portage tree. Remove experimental ebuild linking to Xaw3dxft.

  11 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild:
  Sync from portage tree.

*emacs-vcs-24.0.9999-r2 (04 Mar 2011)

  04 Mar 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r2.ebuild: