@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST emacs-24.0.90.tar.gz 50961184 RMD160 aa7f7997240f5b9db2979e0ba25ac762f796711b SHA1 a37880965d1763215bae935f1f28dd9e6505dd8c SHA256 629ca66cfa529a783a9e372e010a8b8d8b3d65e1e5105ef94f1621a403b9cb83
 EBUILD emacs-vcs-23.3.9999.ebuild 10755 RMD160 7a734fda1bcce9a2e9a9f3fd10d47c95314b8ce9 SHA1 ce2f763a475269b01f1263d583b15d9255401eca SHA256 3eb4e1fe2d54d579fac4099f3192c222e864915b44462c9afcbfbbddc26468b1
+EBUILD emacs-vcs-24.0.90.ebuild 10936 RMD160 76e9142e0627668a290740b7dd53fb5189474ad5 SHA1 35310346f86eeede1938af59e07660af0944ab4c SHA256 a9895fd7017beccfe10c8580b30d0beefaf234853ce9db8812ab62b51b05c9e2
 EBUILD emacs-vcs-24.0.9999-r1.ebuild 10936 RMD160 76e9142e0627668a290740b7dd53fb5189474ad5 SHA1 35310346f86eeede1938af59e07660af0944ab4c SHA256 a9895fd7017beccfe10c8580b30d0beefaf234853ce9db8812ab62b51b05c9e2
-MISC ChangeLog 4473 RMD160 6f38821dc21bdd93a870869ef71b51c3bd9cad1b SHA1 71e085bd310033d1fa6f645257c713887e7c2f5d SHA256 3fefe1247f2da4104abdca5c1288a6295221b813f5eb0df6daec15360fd0663e
+MISC ChangeLog 4606 RMD160 fe89d6315dadd7954d342092fefea7973398c9f5 SHA1 4a7e7d51f8a2ed603803e3e1ffaaa673993e1bde SHA256 145840e49982ba8bb65baf34e2e450eceda4e86c32884acdd8e898cd6b8bed47
 MISC metadata.xml 2201 RMD160 8bba967b2bdaf3077133de2515215c625040de6a SHA1 5ab3c959ecbc61eff74977682285ee818e9f83ff SHA256 a056138705867cdfae4a8f1ade81b57edfa9f8e81f51f0650996a72871cbfbb8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk59z04ACgkQOeoy/oIi7uwp9ACdGnxxI7Y2OI9rm0QfGy8ySQa8
-8EsAoOcX0VbFFulTPkvEvuRVq+nGhaNv
-=mpha
+iEYEARECAAYFAk6AGCAACgkQOeoy/oIi7uxu4gCg3pj7iFtOySqZKHeTWw6mUXBq
+noEAn3h7o+orCBun9nuqt5v/rgS8W+7t
+=8RVH
 -----END PGP SIGNATURE-----
