@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-vcs-24.0.90 (26 Sep 2011)
+
+  26 Sep 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.90.ebuild:
+  Pretest for Emacs 24.
+
   24 Sep 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
   emacs-vcs-24.0.9999-r1.ebuild, metadata.xml:
   With USE="athena", link against libXaw.
